Deactivate disqus comments

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ nav:
     href:           "/resources"
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics: ""
+# google_analytics: ""
 highlighter: rouge
 # Use the following plug-ins
 gems:
