--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -38,6 +38,7 @@ jobs:
         git config --local user.name "GitHub Action"
         git clean -fd
         git fetch origin master
+        git checkout master
         ls -Q | grep -v _site | xargs rm -rf
         mv _site/* .
         rm -rf _site
